# ParS-Focus-Feedback

./: README.md  autofocus.py  calibration.py  focus_metric.py  pyproject.toml  zhuang.py
src/auto_focus/: __init__.py  autofocus.py  calibration.py  cli.py  focus_metric.py  hardware.py  micromanager.py  pg_gui.py  pid_controller.py  ui_signals.py
tests/: test_calibration_domain_guard.py  test_focus_metric_fast_gaussian.py  test_pid_controller.py  test_zhuang_analytical.py
